--- a/spec/fixtures/vcr_cassettes/BackendFacade/_create_character/creates_a_character_with_the_passed_in_argument_info_and_returns_Character.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/_create_character/creates_a_character_with_the_passed_in_argument_info_and_returns_Character.yml
@@ -23,11 +23,11 @@ http_interactions:
       Server:
       - Cowboy
       Date:
-      - Thu, 06 Jun 2024 16:56:04 GMT
+      - Thu, 06 Jun 2024 17:11:14 GMT
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717692958&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=VuirFzgQvYLhxQjPoMZkRvFk1%2Bwe5wQsvV6LYgQled0%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693874&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=4R5SR0bEHxlUI3qrkSD%2FByT26W28OoCwusrA4RfMV9o%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717692958&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=VuirFzgQvYLhxQjPoMZkRvFk1%2Bwe5wQsvV6LYgQled0%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717693874&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=4R5SR0bEHxlUI3qrkSD%2FByT26W28OoCwusrA4RfMV9o%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -47,23 +47,13 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-<<<<<<< HEAD
-      - W/"a1aa0bf9d1eead771c2c19c22a1ecc11"
+      - W/"80f6a9dbf1d440556ca4ca16bb476099"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 237442af-a2a3-486e-a408-b357737a61e2
+      - cd18c571-ffbc-44da-be4a-77d34026e439
       X-Runtime:
-      - '2.378303'
-=======
-      - W/"0651ab733588e94d9f2abae9d7c4b821"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - e18488dc-b5a2-4107-9123-b49214b70168
-      X-Runtime:
-      - '6.684111'
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+      - '0.054026'
       Strict-Transport-Security:
       - max-age=63072000; includeSubDomains
       Content-Length:
@@ -72,13 +62,7 @@ http_interactions:
       - 1.1 vegur
     body:
       encoding: UTF-8
-<<<<<<< HEAD
-      string: '{"data":{"id":"34","type":"character","attributes":{"name":"Character
+      string: '{"data":{"id":"36","type":"character","attributes":{"name":"Character
         Name","user_id":1,"dnd_race":"Human","dnd_class":"Bard","image_url":null},"relationships":{"user":{"data":{"id":"1","type":"user"}},"user_campaigns":{"data":[]},"campaigns":{"data":[]}}}}'
-  recorded_at: Thu, 06 Jun 2024 16:45:34 GMT
-=======
-      string: '{"data":{"id":"35","type":"character","attributes":{"name":"Character
-        Name","user_id":1,"dnd_race":"Human","dnd_class":"Bard","image_url":null},"relationships":{"user":{"data":{"id":"1","type":"user"}},"user_campaigns":{"data":[]},"campaigns":{"data":[]}}}}'
-  recorded_at: Thu, 06 Jun 2024 16:56:05 GMT
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+  recorded_at: Thu, 06 Jun 2024 17:11:14 GMT
 recorded_with: VCR 6.2.0
