--- a/spec/fixtures/vcr_cassettes/BackendFacade/can_get_user_info.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/can_get_user_info.yml
@@ -23,11 +23,11 @@ http_interactions:
       Server:
       - Cowboy
       Date:
-      - Thu, 06 Jun 2024 16:55:51 GMT
+      - Thu, 06 Jun 2024 17:11:09 GMT
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717692945&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=REsZAtpbkQNdrgci3k%2B%2Byn6CtV14FdjKMuuAslVy5eI%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693863&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=XJwqI%2BDU%2Fz8CV3ztmpUKS0UK3760kTi2I18mr0Xpy%2B8%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717692945&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=REsZAtpbkQNdrgci3k%2B%2Byn6CtV14FdjKMuuAslVy5eI%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717693863&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=XJwqI%2BDU%2Fz8CV3ztmpUKS0UK3760kTi2I18mr0Xpy%2B8%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -51,15 +51,9 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-<<<<<<< HEAD
-      - 804e8b2f-58e0-4a2e-aae4-948b9f7dd83b
+      - 903f7db6-b325-4f27-a184-9292a5ccc8cb
       X-Runtime:
-      - '2.488262'
-=======
-      - 1407705f-62ef-440b-aa3b-6560670c7dd8
-      X-Runtime:
-      - '6.191134'
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+      - '6.627384'
       Strict-Transport-Security:
       - max-age=63072000; includeSubDomains
       Content-Length:
@@ -68,11 +62,6 @@ http_interactions:
       - 1.1 vegur
     body:
       encoding: UTF-8
-<<<<<<< HEAD
-      string: '{"data":{"id":"1","type":"user","attributes":{"uid":"1234567890","username":"testuser123","token":"1234asdf"},"relationships":{"user_campaigns":{"data":[]},"campaigns":{"data":[]},"characters":{"data":[]}}}}'
-  recorded_at: Thu, 06 Jun 2024 16:45:31 GMT
-=======
       string: '{"data":{"id":"100","type":"user","attributes":{"uid":"1234567890","username":"testuser123","token":"1234asdf"},"relationships":{"user_campaigns":{"data":[]},"campaigns":{"data":[]},"characters":{"data":[]}}}}'
-  recorded_at: Thu, 06 Jun 2024 16:55:52 GMT
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+  recorded_at: Thu, 06 Jun 2024 17:11:09 GMT
 recorded_with: VCR 6.2.0
