--- a/spec/fixtures/vcr_cassettes/BackendService/can_hit_back_end_endpoint_-_items.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/can_hit_back_end_endpoint_-_items.yml
@@ -23,11 +23,11 @@ http_interactions:
       Server:
       - Cowboy
       Date:
-      - Thu, 06 Jun 2024 17:01:33 GMT
+      - Thu, 06 Jun 2024 17:11:44 GMT
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693294&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=H8MDdgDfPeKlmO3eP8eJEnFAFwBEy17VcNxz9agaqMw%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693904&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=YzsMNca63y1%2FmChq73Z9%2FreBF93Ky96fYf60GFwjCj0%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717693294&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=H8MDdgDfPeKlmO3eP8eJEnFAFwBEy17VcNxz9agaqMw%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717693904&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=YzsMNca63y1%2FmChq73Z9%2FreBF93Ky96fYf60GFwjCj0%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -47,40 +47,21 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-<<<<<<< HEAD
-      - W/"c4f372fe5e26ebc881577adc464e216e"
+      - W/"f236b25edc07a899c8d607f57d1ad3a9"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - f49cca36-72c6-4fa8-95f7-b194b96363dd
+      - a3078475-dc07-42e1-8222-7576caf05cb9
       X-Runtime:
-      - '0.013307'
+      - '0.028368'
       Strict-Transport-Security:
       - max-age=63072000; includeSubDomains
       Content-Length:
-      - '760'
-=======
-      - W/"cd74489c1730fd140ffbcc2a96df7d9d"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - b90611d0-61de-4aea-9515-11ce51584907
-      X-Runtime:
-      - '0.029689'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
-      Content-Length:
-      - '826'
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+      - '892'
       Via:
       - 1.1 vegur
     body:
       encoding: UTF-8
-<<<<<<< HEAD
-      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"34","type":"campaign_item"},{"id":"61","type":"campaign_item"},{"id":"88","type":"campaign_item"},{"id":"115","type":"campaign_item"},{"id":"142","type":"campaign_item"},{"id":"169","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"34","type":"campaign"},{"id":"35","type":"campaign"},{"id":"36","type":"campaign"},{"id":"37","type":"campaign"},{"id":"38","type":"campaign"},{"id":"39","type":"campaign"}]}}}}'
-  recorded_at: Thu, 06 Jun 2024 16:45:57 GMT
-=======
-      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"34","type":"campaign_item"},{"id":"61","type":"campaign_item"},{"id":"88","type":"campaign_item"},{"id":"115","type":"campaign_item"},{"id":"142","type":"campaign_item"},{"id":"169","type":"campaign_item"},{"id":"196","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"34","type":"campaign"},{"id":"35","type":"campaign"},{"id":"36","type":"campaign"},{"id":"37","type":"campaign"},{"id":"38","type":"campaign"},{"id":"39","type":"campaign"},{"id":"40","type":"campaign"}]}}}}'
-  recorded_at: Thu, 06 Jun 2024 17:01:34 GMT
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"34","type":"campaign_item"},{"id":"61","type":"campaign_item"},{"id":"88","type":"campaign_item"},{"id":"115","type":"campaign_item"},{"id":"142","type":"campaign_item"},{"id":"169","type":"campaign_item"},{"id":"196","type":"campaign_item"},{"id":"223","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"34","type":"campaign"},{"id":"35","type":"campaign"},{"id":"36","type":"campaign"},{"id":"37","type":"campaign"},{"id":"38","type":"campaign"},{"id":"39","type":"campaign"},{"id":"40","type":"campaign"},{"id":"41","type":"campaign"}]}}}}'
+  recorded_at: Thu, 06 Jun 2024 17:11:44 GMT
 recorded_with: VCR 6.2.0
