--- a/spec/fixtures/vcr_cassettes/DndFacade/get_class_info.yml
+++ b/spec/fixtures/vcr_cassettes/DndFacade/get_class_info.yml
@@ -21,9 +21,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693099&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Svodw8XHr9CcZjwO2%2BFJ%2BQOGuqz4Cez2wsY91nKDgsw%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693893&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=yp6Jd1G%2FKacmvsLXYS4EPSOVg4h9Wn6Mwci7wY%2BIa0Y%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717693099&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Svodw8XHr9CcZjwO2%2BFJ%2BQOGuqz4Cez2wsY91nKDgsw%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717693893&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=yp6Jd1G%2FKacmvsLXYS4EPSOVg4h9Wn6Mwci7wY%2BIa0Y%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -37,15 +37,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-<<<<<<< HEAD
-      - Thu, 06 Jun 2024 16:45:46 GMT
+      - Thu, 06 Jun 2024 17:11:33 GMT
       X-Ratelimit-Reset:
-      - '1717692348'
-=======
-      - Thu, 06 Jun 2024 16:58:19 GMT
-      X-Ratelimit-Reset:
-      - '1717693101'
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+      - '1717693895'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -57,11 +51,7 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"count":12,"results":[{"index":"barbarian","name":"Barbarian","url":"/api/classes/barbarian"},{"index":"bard","name":"Bard","url":"/api/classes/bard"},{"index":"cleric","name":"Cleric","url":"/api/classes/cleric"},{"index":"druid","name":"Druid","url":"/api/classes/druid"},{"index":"fighter","name":"Fighter","url":"/api/classes/fighter"},{"index":"monk","name":"Monk","url":"/api/classes/monk"},{"index":"paladin","name":"Paladin","url":"/api/classes/paladin"},{"index":"ranger","name":"Ranger","url":"/api/classes/ranger"},{"index":"rogue","name":"Rogue","url":"/api/classes/rogue"},{"index":"sorcerer","name":"Sorcerer","url":"/api/classes/sorcerer"},{"index":"warlock","name":"Warlock","url":"/api/classes/warlock"},{"index":"wizard","name":"Wizard","url":"/api/classes/wizard"}]}'
-<<<<<<< HEAD
-  recorded_at: Thu, 06 Jun 2024 16:45:46 GMT
-=======
-  recorded_at: Thu, 06 Jun 2024 16:58:19 GMT
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+  recorded_at: Thu, 06 Jun 2024 17:11:33 GMT
 - request:
     method: get
     uri: https://www.dnd5eapi.co/api/races
@@ -83,15 +73,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-<<<<<<< HEAD
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717692346&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=gPGSzMm4EQ5aevV7Od8Jo3e6mVcxBJfAGNVW%2FWelFvI%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693893&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=yp6Jd1G%2FKacmvsLXYS4EPSOVg4h9Wn6Mwci7wY%2BIa0Y%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717692346&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=gPGSzMm4EQ5aevV7Od8Jo3e6mVcxBJfAGNVW%2FWelFvI%3D
-=======
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693100&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=QQ8tFD71W87%2BCH9vqa1oA5H1C9pnjv05lIUDSWMcELQ%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717693100&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=QQ8tFD71W87%2BCH9vqa1oA5H1C9pnjv05lIUDSWMcELQ%3D
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717693893&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=yp6Jd1G%2FKacmvsLXYS4EPSOVg4h9Wn6Mwci7wY%2BIa0Y%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -105,15 +89,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-<<<<<<< HEAD
-      - Thu, 06 Jun 2024 16:45:46 GMT
+      - Thu, 06 Jun 2024 17:11:33 GMT
       X-Ratelimit-Reset:
-      - '1717692348'
-=======
-      - Thu, 06 Jun 2024 16:58:20 GMT
-      X-Ratelimit-Reset:
-      - '1717693102'
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+      - '1717693895'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -125,9 +103,5 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"count":9,"results":[{"index":"dragonborn","name":"Dragonborn","url":"/api/races/dragonborn"},{"index":"dwarf","name":"Dwarf","url":"/api/races/dwarf"},{"index":"elf","name":"Elf","url":"/api/races/elf"},{"index":"gnome","name":"Gnome","url":"/api/races/gnome"},{"index":"half-elf","name":"Half-Elf","url":"/api/races/half-elf"},{"index":"half-orc","name":"Half-Orc","url":"/api/races/half-orc"},{"index":"halfling","name":"Halfling","url":"/api/races/halfling"},{"index":"human","name":"Human","url":"/api/races/human"},{"index":"tiefling","name":"Tiefling","url":"/api/races/tiefling"}]}'
-<<<<<<< HEAD
-  recorded_at: Thu, 06 Jun 2024 16:45:46 GMT
-=======
-  recorded_at: Thu, 06 Jun 2024 16:58:20 GMT
->>>>>>> 0b5d6c914ae307e4b4b7b73cddbcd0519e70620f
+  recorded_at: Thu, 06 Jun 2024 17:11:33 GMT
 recorded_with: VCR 6.2.0
