--- a/spec/fixtures/vcr_cassettes/BackendService/can_hit_back_end_endpoint_-_items.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/can_hit_back_end_endpoint_-_items.yml
@@ -20,18 +20,6 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Cowboy
-      Date:
-      - Thu, 06 Jun 2024 21:09:22 GMT
-      Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717708162&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=QPSdwX3sVvkseXmv1bdr60gQgcmdCHVrY6zmMrFjJ1Y%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717708162&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=QPSdwX3sVvkseXmv1bdr60gQgcmdCHVrY6zmMrFjJ1Y%3D
-      Nel:
-      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
-      Connection:
-      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -47,21 +35,20 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"1c4b445b95d422fa00dc6ddb1b9f4da2"
+      - W/"469f70b7d17a9bab2031f4ba4e3cc447"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - aa31cc28-2428-4ccb-871f-26a8091e24b7
+      - 2fbab6a8-45a5-4432-afb1-30a02287fef1
       X-Runtime:
-      - '0.106293'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
+      - '0.037867'
+      Server-Timing:
+      - start_processing.action_controller;dur=0.01, sql.active_record;dur=3.28, instantiation.active_record;dur=0.47,
+        process_action.action_controller;dur=13.44
       Content-Length:
-      - '1288'
-      Via:
-      - 1.1 vegur
+      - '689'
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"34","type":"campaign_item"},{"id":"61","type":"campaign_item"},{"id":"88","type":"campaign_item"},{"id":"115","type":"campaign_item"},{"id":"142","type":"campaign_item"},{"id":"169","type":"campaign_item"},{"id":"196","type":"campaign_item"},{"id":"223","type":"campaign_item"},{"id":"250","type":"campaign_item"},{"id":"277","type":"campaign_item"},{"id":"304","type":"campaign_item"},{"id":"331","type":"campaign_item"},{"id":"358","type":"campaign_item"},{"id":"385","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"34","type":"campaign"},{"id":"35","type":"campaign"},{"id":"36","type":"campaign"},{"id":"37","type":"campaign"},{"id":"38","type":"campaign"},{"id":"39","type":"campaign"},{"id":"40","type":"campaign"},{"id":"41","type":"campaign"},{"id":"42","type":"campaign"},{"id":"43","type":"campaign"},{"id":"44","type":"campaign"},{"id":"45","type":"campaign"},{"id":"46","type":"campaign"},{"id":"47","type":"campaign"}]}}}}'
-  recorded_at: Thu, 06 Jun 2024 21:09:22 GMT
+      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"28","type":"campaign_item"},{"id":"55","type":"campaign_item"},{"id":"82","type":"campaign_item"},{"id":"109","type":"campaign_item"},{"id":"136","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"2","type":"campaign"},{"id":"3","type":"campaign"},{"id":"4","type":"campaign"},{"id":"5","type":"campaign"},{"id":"6","type":"campaign"}]}}}}'
+  recorded_at: Fri, 07 Jun 2024 02:21:00 GMT
 recorded_with: VCR 6.2.0
