--- a/spec/fixtures/vcr_cassettes/BackendService/can_hit_user_campaigns.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/can_hit_user_campaigns.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/user_campaigns
+    uri: http://localhost:3000/api/v1/user_campaigns
     body:
       encoding: UTF-8
       string: '{"user_campaign":{"user_id":1,"campaign_id":1,"role":0}}'
@@ -20,18 +20,6 @@ http_interactions:
       code: 201
       message: Created
     headers:
-      Server:
-      - Cowboy
-      Date:
-      - Thu, 06 Jun 2024 21:39:49 GMT
-      Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717709990&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Mf8SxyjYX7Stb%2BP%2BT1QuWG0AC4aLHp4X1Fhv3%2FOGAsA%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717709990&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Mf8SxyjYX7Stb%2BP%2BT1QuWG0AC4aLHp4X1Fhv3%2FOGAsA%3D
-      Nel:
-      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
-      Connection:
-      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -47,21 +35,20 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"1972bc16ae53b0b3ba58ca6384d09882"
+      - W/"f5e56c37b8599518fa6de5834694a107"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 57e92b69-67b5-4f48-bf34-72b21df9d84b
+      - 46c632e5-9173-430b-8637-8c35dac17921
       X-Runtime:
-      - '0.009827'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
+      - '0.011566'
+      Server-Timing:
+      - start_processing.action_controller;dur=0.00, sql.active_record;dur=2.82, instantiation.active_record;dur=0.06,
+        transaction.active_record;dur=4.84, process_action.action_controller;dur=6.46
       Content-Length:
-      - '214'
-      Via:
-      - 1.1 vegur
+      - '213'
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"49","type":"user_campaign","attributes":{"role":"party_member"},"relationships":{"user":{"data":{"id":"1","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":null}}}}'
-  recorded_at: Thu, 06 Jun 2024 21:39:50 GMT
+      string: '{"data":{"id":"8","type":"user_campaign","attributes":{"role":"party_member"},"relationships":{"user":{"data":{"id":"1","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":null}}}}'
+  recorded_at: Fri, 07 Jun 2024 02:10:12 GMT
 recorded_with: VCR 6.2.0
