--- a/spec/fixtures/vcr_cassettes/BackendService/can_make_a_call_for_users.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/can_make_a_call_for_users.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/1
+    uri: http://localhost:3000/api/v1/users/1
     body:
       encoding: UTF-8
       string: '{"user":{"username":"bob","token":"example"}}'
@@ -20,18 +20,6 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Cowboy
-      Date:
-      - Thu, 06 Jun 2024 21:20:42 GMT
-      Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717708843&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=mJdADpKrdPuNL2J88PMbMy4GNyUgCzGu2N6lNFgqlQ4%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717708843&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=mJdADpKrdPuNL2J88PMbMy4GNyUgCzGu2N6lNFgqlQ4%3D
-      Nel:
-      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
-      Connection:
-      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -47,21 +35,20 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"735c280070d95cab7de33314dafb38c4"
+      - W/"c0b7cd21bedbe7f75c316956c1c04462"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 3f2cae5d-e112-4713-ba55-8fc972f8f573
+      - 55993f54-a83d-4abb-b4ef-24b9989672bc
       X-Runtime:
-      - '0.063137'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
+      - '0.059177'
+      Server-Timing:
+      - start_processing.action_controller;dur=0.02, sql.active_record;dur=10.13,
+        transaction.active_record;dur=4.73, process_action.action_controller;dur=34.41
       Content-Length:
-      - '191'
-      Via:
-      - 1.1 vegur
+      - '189'
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"102","type":"user","attributes":{"uid":"1","username":"bob","token":"example"},"relationships":{"user_campaigns":{"data":[]},"campaigns":{"data":[]},"characters":{"data":[]}}}}'
-  recorded_at: Thu, 06 Jun 2024 21:20:43 GMT
+      string: '{"data":{"id":"6","type":"user","attributes":{"uid":"1","username":"bob","token":"example"},"relationships":{"user_campaigns":{"data":[]},"campaigns":{"data":[]},"characters":{"data":[]}}}}'
+  recorded_at: Fri, 07 Jun 2024 02:17:18 GMT
 recorded_with: VCR 6.2.0
